codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__ps_output_multiline_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
/ps

Background terminals

  • echo hello [...]
    ↳ hello
    ↳ done
  • rg "foo" src
    ↳ src/main.rs:12:foo
