codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__session_header_indicates_yolo_mode.snap
---
source: tui/src/history_cell.rs
assertion_line: 4216
expression: rendered
---
╭─────────────────────────────────────────────────────────╮
│     ⢀⣠⣤⣤⣄⡀                                              │
│    ⣠⣿⣿⣿⣿⣿⣿⣿⣿⣷⣄    >_ OpenAI Codex (vtest)               │
│  ⣴⣿⣿⠿⢿⣿⣿⣿⣿⣿⣿⣿⣿⡆                                         │
│ ⢰⣿⣿⣿⣄⠈⢿⣿⣿⣿⣿⣿⣿⣿⣧   model:       gpt-5   /model to change │
│  ⢻⣿⣿⠏⢀⣾⣿⠿⠿⠿⠿⣿⣿⣿⡇  directory:   /tmp/project             │
│  ⢸⣿⣿⣶⣿⣿⣿⣶⣶⣶⣶⣿⣿⡟   permissions: YOLO mode                │
│   ⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⠏⠁                                          │
│     ⠉⠉⠙⠻⠿⠿⠟⠋                                            │
╰─────────────────────────────────────────────────────────╯
