codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
---
source: tui/src/history_cell.rs
assertion_line: 3293
expression: rendered
---
╭───────────────────────────────────────────────────────╮
│     ⢀⣠⣤⣤⣄⡀                                            │
│    ⣠⣿⣿⣿⣿⣿⣿⣿⣿⣷⣄                                        │
│  ⣴⣿⣿⠿⢿⣿⣿⣿⣿⣿⣿⣿⣿⡆   >_ OpenAI Codex (v0.0.0)            │
│ ⢰⣿⣿⣿⣄⠈⢿⣿⣿⣿⣿⣿⣿⣿⣧                                       │
│  ⢻⣿⣿⠏⢀⣾⣿⠿⠿⠿⠿⣿⣿⣿⡇  model:     gpt-5   /model to change │
│  ⢸⣿⣿⣶⣿⣿⣿⣶⣶⣶⣶⣿⣿⡟   directory: /tmp/project             │
│   ⠻⣿⣿⣿⣿⣿⣿⣿⣿⣿⠏⠁                                        │
│     ⠉⠉⠙⠻⠿⠿⠟⠋                                          │
╰───────────────────────────────────────────────────────╯

  Tip: Model just became available
