codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__status_usage_limits_full_snapshot.snap
---
source: tui/src/history_cell.rs
expression: visual
---
/status
📂 Workspace
  • Path: ~/code/codex/codex-rs/tui
  • Approval Mode: on-request
  • Sandbox: read-only
  • AGENTS files: ../../AGENTS.md

🧠 Model
  • Name: gpt-5
  • Provider: OpenAI
  • Reasoning Effort: None
  • Reasoning Summaries: Auto

💻 Client
  • CLI Version: 0.0.0

📊 Token Usage
  • Input: 0
  • Output: 0
  • Total: 0

⏱️ Usage Limits
  • 5h limit    : [████████████████████] 100% used
  • Weekly limit: [████████████████████] 100% used
